<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewAnimator
        android:id="@+id/viewanimator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/et_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:ems="10"
                        android:hint="@string/nom"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/et_prenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/prenom"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/bd"
                        android:textAlignment="center"
                        android:textSize="20dp"/>

                    <DatePicker
                        android:id="@+id/dp_bd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                         />

                    <EditText
                        android:id="@+id/et_adresse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/adress"
                        android:inputType="textPostalAddress" />

                    <EditText
                        android:id="@+id/et_cp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/cp" />

                    <EditText
                        android:id="@+id/et_ville"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ville" />

                    <EditText
                        android:id="@+id/et_fixe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/fixe"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/mobile"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/et_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/mail"
                        android:inputType="textEmailAddress" />

                    <Button
                        android:id="@+id/btn_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:layout_gravity="center"/>


                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_prev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/prev" />

                    <EditText
                        android:id="@+id/et_dip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/text_dip" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/formation_souhaitee"
                        android:textAlignment="center" />

                    <RadioGroup
                        android:id="@+id/rg_bts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/rb_res"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bts_sio_res" />

                        <RadioButton
                            android:id="@+id/rb_dev"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bts_sio_dev" />

                        <RadioGroup
                            android:id="@+id/rg_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp">

                            <RadioButton
                                android:id="@+id/rb_init"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/init" />

                            <RadioButton
                                android:id="@+id/rb_alt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/alt" />

                            <RadioButton
                                android:id="@+id/rb_dunno"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dunno" />
                        </RadioGroup>

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="2dp"
                            android:background="#000000" />

                        <RadioButton
                            android:id="@+id/rb_ana_dev"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ana_dev" />

                        <RadioButton
                            android:id="@+id/rbb_ana_res"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ana_res" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="2dp"
                            android:background="#000000" />

                        <RadioButton
                            android:id="@+id/rb_archi_dev"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/archi_dev" />

                        <RadioButton
                            android:id="@+id/archi_res"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/archi_res" />

                        <Button
                            android:id="@+id/btn_valider"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/valider" />
                    </RadioGroup>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </ViewAnimator>

</LinearLayout>