<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_admin_conn"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/et_user"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user" />

    <EditText
        android:id="@+id/et_mdp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mdp" />

    <Button
        android:id="@+id/btn_conn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:layout_gravity="center"/>

</LinearLayout>